# BrainShare

./: .gitignore  BUILD-PLAN.md  CLAUDE.md  README.md  ROADMAP.md
backend/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/app/: auth.py  auth_supabase.py  config.py  db.py  dto.py  embeddings.py  main.py  modules.py  schemas.py  vector_store.py
backend/app/embedding/: __init__.py  client.py  registry.py
backend/app/models/: __init__.py  entities.py  enums.py  graph.py
backend/app/pipeline/: __init__.py  extractors.py  runner.py
backend/app/routers/: apikeys.py  branding.py  collections.py  directories.py  files.py  graph.py  ingest.py  search.py  users.py
backend/app/services/: apikeys.py  collections.py  directories.py  files.py  permissions.py  users.py
backend/app/storage/: __init__.py
backend/scripts/: bootstrap_tester.py  celeb_assign_test.py  celeb_face_test.py  face_check.py  ingest_timing.py  migrate_sqlite_to_pg.py  ram_check.py  reembed_failed.py  reindex.py  reobjects.py  seed_corpus.py  test_battery.py
deploy/: serve.sh
dev/: deploy-env-dev.sh  deploy-inside-env-dev.sh
extension/: CHANGES.md  index.html  package-lock.json  package.json  search.html  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
extension/public/: manifest.json
extension/src/: App.tsx  types.ts
extension/src/components/: Header.tsx  SaveView.tsx  SettingsView.tsx  Setup.tsx
extension/src/content/: chunker.ts  extractor.ts  index.ts
modal/: app.py
web/: next.config.ts  package.json  pnpm-lock.yaml
(+41 files in other folders)
