[project]
name = "rag-extension-backend"
version = "0.1.0"
description = "Backend for the personal-corpus Chrome extension"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "qdrant-client>=1.12",
    "google-genai>=0.3",
    "aiosqlite>=0.20",
    "python-dotenv>=1.0",
]

[tool.uv]
dev-dependencies = [
    "httpx>=0.27",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]
