[project]
name = "brainshare-backend"
version = "0.2.0"
description = "BrainShare — multi-modal knowledge drive + semantic search backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.20",
    "greenlet>=3.0",
    "asyncpg>=0.30",
    "qdrant-client>=1.12",
    "modal>=1.0",
    "python-multipart>=0.0.12",
    "numpy",
    "pillow",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "httpx>=0.27",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]
